style.css
/* Mobile first version */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
}

/* Header */

header {
  background-color: #3c3a39;
  color: white;
  font-family: "Roboto", sans-serif;
}

/* Navbar */

nav {
  margin: 0 1.5rem;
  padding: 1.5rem 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav > span {
  font-size: 1rem;
  font-weight: bold;
}

li {
  list-style: none;
}

a {
  color: white;
  text-decoration: none;
}

.hidden-items {
  display: none;
}

/* Headline section */

section#headline {
  background-color: #1c1a19;
  background-image: url("images/illustration-header-mobile.png");
  background-repeat: no-repeat;
  background-position: 100% 130%;
  padding: 0 1.2rem 6rem 1.2rem;
}

#greeting {
  padding-right: 1.2rem;
}

.title {
  color: #ff6b00;
  font-family: "Crete Round", sans-serif;
  font-weight: normal;
  font-size: 3.5rem;
  padding-top: 5rem;
}

h2 {
  color: #fff;
  font-family: "Roboto", sans-serif;
  font-size: 1.4rem;
  padding: 1rem 0 1rem 0;
}

.description-p {
  color: white;
  font-family: "Poppins", sans-serif;
  font-size: 0.9rem;
  line-height: 1.5rem;
}

/* Headline icons */

div#headline-icons > ul {
  color: #dbd8d7;
  padding-top: 1.2rem;
  display: flex;
  align-items: center;
  gap: 1.2rem;
}

.icon:hover {
  cursor: pointer;
}

/* Projects section */

section#projects {
  padding: 0 1.5rem 6rem 1.5rem;
}

#projects-grid {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

#h2-projects {
  color: #1c1a19;
  font-family: "Crete Round", sans-serif;
  font-weight: normal;
  font-size: 2.5rem;
  text-align: center;
  margin-top: 6rem;
  border-bottom: 1px solid #212121;
}

#main-image-div {
  display: flex;
  justify-content: center;
}

#orange-project {
  margin: 3rem 0 1.2rem 0;
}

#desktop-image {
  display: none;
}

#main-project-content {
  padding: 0 1rem 0 0.5rem;
}

#orange-h3 {
  font-family: "Crete Round", sans-serif;
  color: #091e42;
  font-weight: normal;
  font-size: 2rem;
  padding: 0 0 1rem 0;
}

#orange-p {
  font-family: "Inter", sans-serif;
  color: #091e42;
  font-size: 1rem;
  line-height: 1.5rem;
}

h3 {
  font-family: "Crete Round", sans-serif;
  color: #fff;
  font-weight: normal;
  font-size: 2rem;
  padding: 0 0 1.2rem 0.6rem;
}

div.mini-projects p {
  color: #fff;
  font-family: "Inter", sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  padding: 0 0 0.6rem 0.6rem;
}

.box {
  border: 1px solid #8993a4;
  font-family: "Inter", sans-serif;
  color: #091e42;
  padding: 0.6rem 0.7rem;
  display: inline;
  font-size: 1rem;
}

.language-container {
  display: flex;
  gap: 0.6rem;
  margin-top: 1rem;
}

.mini-languages-container {
  display: flex;
  gap: 1rem;
  padding: 0 0 1.5rem 0.6rem;
}

.mini-projects {
  background-image: url("images/Img1.png");
  background-repeat: no-repeat;
  background-size: cover;
  height: 390px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  margin-top: 1.5rem;
}

.mini-box {
  color: #fff;
  font-family: "Inter", sans-serif;
  font-size: 1rem;
  padding: 0.6rem 0.7rem;
  background: rgba(255, 255, 255, 0.3);
}

/* Buttons */

button,
#submit {
  background-color: #ff6b00;
  font-family: "Inter", sans-serif;
  font-weight: 700;
  color: white;
  border: none;
  font-size: 1.1rem;
  padding: 0.7rem;
}

#main-project-button {
  margin-top: 0.7rem;
}

#submit {
  margin-bottom: 6rem;
  animation: change-color infinite 1s;
  animation-direction: alternate;
}

@keyframes change-color {
  from {
    background-color: #ff6b00;
  }

  to {
    background-color: rgb(240, 229, 229);
    color: #ff6b00;
  }
}

button:hover,
#submit:hover {
  background-color: #fff5e1;
  color: #ff6b00;
  cursor: pointer;
}

button:focus,
#submit:focus {
  background-color: #f4f1f0;
  color: #5b5957;
}

button#resume {
  margin: 1rem 0 12rem 0;
  border: none;
}

/* About-me section */

#about-me {
  background-color: #1c1a19;
  padding: 0 1.2rem 3rem 1.2rem;
}

div#about-me-description {
  background-image: url("images/illustration-about-me-mobile.png");
  background-repeat: no-repeat;
  background-position: bottom right;
  border-bottom: 1px solid #fff;
}

#skills {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

h2.title {
  text-align: center;
  font-size: 4.5rem;
}

#languages-list,
#skills-list,
#frameworks-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  color: white;
  font-family: "Inter", sans-serif;
  font-size: 1.3rem;
}

#skills h3 {
  color: white;
  font-family: "Inter", sans-serif;
  font-weight: 700;
  margin: 3rem 0;
}

div.skills-title {
  display: flex;
  align-items: baseline;
}

.orange-icon {
  width: 1.2rem;
  height: 1.2rem;
}

#about-me-p {
  font-size: 1rem;
}

/* Form section */

#form-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 6rem;
  font-family: "Inter", sans-serif;
}

#form-section h2 {
  font-size: 2rem;
  font-weight: 700;
  color: #172b4d;
  text-align: center;
  line-height: 2.5rem;
  padding: 0 2rem;
}

#form-section fieldset {
  margin-top: 3rem;
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
  border: none;
}

.inputs {
  padding: 1.2rem;
  width: 80vw;
  border: none;
  font-size: 1rem;
  line-height: 1.5rem;
  border-bottom: 1px solid #dbd8d7;
}

#comments {
  height: 7rem;
  background-color: #fbf8f7;
  border: none;
  padding: 1.2rem;
  margin-bottom: 1.2rem;
}

.gap {
  margin-right: 0.5rem;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-bottom: 1px solid #dfe1e6;
  padding: 0 2rem;
}

/* Footer */

#form-icons {
  width: 100%;
  height: 5.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

/* Media query for desktop version */

@media only screen and (min-width: 1100px) {
  section#headline {
    height: 100vh;
    background-color: #1c1a19;
    background-image: url("images/Illustration-header.png");
    background-repeat: no-repeat;
    background-position: top right;
    background-size: contain;
  }

  div#greeting {
    width: 40rem;
    position: relative;
    left: 20rem;
  }

  header {
    height: 4.5rem;
  }

  #menu {
    display: none;
  }

  nav {
    margin: 0 20rem;
  }

  nav > ul {
    display: flex;
    gap: 5rem;
  }

  nav > ul > li {
    font-size: 1rem;
    font-weight: 600;
  }

  nav > span {
    font-size: 1.2rem;
  }

  .hidden-items {
    display: inline;
    font-size: 1rem;
    transition-property: font-size;
    transition-duration: 1s;
  }

  .hidden-items:hover {
    font-size: 1.4rem;
    text-shadow: 0 0 8px #ff6b00;
  }

  .title {
    font-size: 5rem;
    padding-top: 15rem;
  }

  .title span {
    display: block;
  }

  h2 {
    font-size: 2rem;
    padding: 1.2rem 0 1.2rem 0;
  }

  .description-p {
    font-size: 1.5rem;
    line-height: 2.5rem;
  }

  div#headline-icons {
    position: relative;
    top: -18.5rem;
    left: 5rem;
  }

  div#headline-icons > ul {
    height: 12.5rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 1.2rem;
  }

  section#projects {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  #h2-container {
    position: relative;
    margin: 6rem 0;
    width: 65%;
  }

  #h2-projects {
    border-bottom: none;
    margin-top: 0;
    text-align: start;
  }

  div#h2-div {
    height: 1px;
    width: 72%;
    background-color: #212121;
    position: absolute;
    top: 3rem;
    left: 22rem;
  }

  #orange-project {
    display: none;
  }

  #desktop-image {
    display: block;
  }

  #projects-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    width: 65%;
  }

  #main-project {
    grid-column: 1 / -1;
    grid-row: 1 / 2;
    display: flex;
    gap: 2rem;
  }

  #orange-h3 {
    font-size: 2.5rem;
    padding: 0 0 1.5rem 0;
  }

  #orange-p {
    font-size: 1.3rem;
    line-height: 1.8rem;
  }

  .language-container {
    justify-content: flex-start;
    gap: 0.8rem;
    margin: 2rem 0 1.2rem 0;
  }

  .box {
    display: flex;
    justify-content: center;
  }

  .mini-projects {
    width: 370px;
    height: 435px;
  }

  .mini-project-button {
    display: none;
  }

  h3 {
    width: 21rem;
  }

  #mini-project1,
  #mini-project4 {
    background-image: url("images/Img1.png");
    background-repeat: no-repeat;
    background-size: cover;
  }

  #mini-project2,
  #mini-project5 {
    background-image: url("images/ImgPlaceholder2.png");
    background-repeat: no-repeat;
    background-size: cover;
  }

  #mini-project3,
  #mini-project6 {
    background-image: url("images/ImgPlaceholder3.png");
    background-repeat: no-repeat;
    background-size: cover;
  }

  .mini-projects:hover {
    cursor: pointer;
    border: 2px solid black;
    background-repeat: no-repeat;
    background-size: cover;
  }

  #mini-project1:hover,
  #mini-project4:hover {
    background: url("images/ImgPlaceholder1.png");
  }

  .mini-projects:hover .mini-project-button {
    display: block;
  }

  .mini-projects:hover .mini-h3 {
    display: none;
  }

  .mini-projects:hover .mini-p {
    display: none;
  }

  .mini-projects:hover .mini-languages-container {
    display: none;
  }

  div#about-me-description {
    background-image: none;
  }

  h2.title {
    text-align: left;
  }

  button#resume {
    margin-top: 50px;
  }

  div#about-me-description p {
    width: 50rem;
  }

  #about-me {
    padding: 0 11rem;
    background-image: url("images/illustration-about\ me2x.png");
    background-repeat: no-repeat;
    background-size: 40%;
    background-position: right 15%;
  }

  #about-me-p {
    font-size: 1.5rem;
    line-height: 2.5rem;
  }

  #skills {
    flex-direction: row;
    justify-content: space-around;
    align-items: baseline;
    padding: 6rem 0;
  }

  #skills h3 {
    margin-bottom: 2rem;
  }

  #languages-list,
  #skills-list,
  #frameworks-list {
    align-items: flex-start;
  }

  #form-section {
    flex-direction: row;
    align-items: flex-start;
    gap: 5rem;
    padding: 11rem;
  }

  section#form-section h2 {
    padding: 0;
    line-height: 4rem;
    font-size: 3rem;
    text-align: left;
  }

  form {
    border-bottom: none;
    align-items: flex-start;
  }

  .inputs {
    width: 50vw;
  }

  #form-section fieldset {
    margin: 0;
    gap: 2.5rem;
  }

  #form-icons {
    border-top: 1px solid #dfe1e6;
    gap: 1.2rem;
  }

  #form-icons img:hover {
    cursor: pointer;
  }
}

